<resources>
    <string name="default_web_client_id">982858819255-cuuo9h6niakl586th28136kok0ns5lu0.apps.googleusercontent.com</string>
    <string name="app_name">Dish Dash</string>
    <string name="dish_dash">Dish Dash</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_login_with">or login with</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="guest">Guest</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="don_t_have_any_accounts_yet">Don\'t have any accounts yet?</string>
    <string name="signup">SignUp</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="by_continuing_you_agree_to_our">By continuing, you agree to our</string>
    <string name="terms_of_service_and_privacy_policy">Terms of Service and Privacy Policy.</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_fragment">Favorite Fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="view_all"><u>View All</u></string>
    <string name="user_name">User Name</string>
    <string name="all_categories_fragment">All Categories Fragment</string>
    <string name="search">Search</string>
    <string name="calender">Calender</string>
    <string name="calender_fragment">Calender Fragment</string>
    <string name="ingredient">Ingredient</string>
    <string name="country">Country</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
</resources>