<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.view.home.search.SearchFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp">

        <View
            android:id="@+id/curvedBackground"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/curved_app_bar" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:text="Search Meals"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/errorFragmentSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="10dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/searchCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/search"
                        app:tint="#22C7A9" />

                    <EditText
                        android:id="@+id/etSearch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="Search here..."
                        android:inputType="text"
                        android:textSize="16sp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupFilters"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                app:checkedIconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchCardView"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCategory"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textColor="@android:color/white"
                    app:checkedIconTint="@android:color/white"
                    app:chipBackgroundColor="@color/green" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCountry"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:textColor="@android:color/white"
                    app:checkedIconTint="@android:color/white"
                    app:chipBackgroundColor="@color/green" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipIngredient"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredient"
                    android:textColor="@android:color/white"
                    app:checkedIconTint="@android:color/white"
                    app:chipBackgroundColor="@color/green" />

            </com.google.android.material.chip.ChipGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSearchResults"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:nestedScrollingEnabled="false"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chipGroupFilters"
                tools:listitem="@layout/category_item_horizontal" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieLoading"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/rvSearchResults"
                app:layout_constraintEnd_toEndOf="@id/rvSearchResults"
                app:layout_constraintStart_toStartOf="@id/rvSearchResults"
                app:layout_constraintTop_toTopOf="@id/rvSearchResults"
                app:lottie_autoPlay="false"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>